working on styling the nav sidebar and the splash page to get the spacing correct and remove whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    /* height: 80vh; */
+    height: 100vh;
     display: flex;
     /* flex-direction: column;
     justify-content: center; */
@@ -62,6 +62,7 @@ header h1 {
 .sidebar-icon {
   position: relative;
   bottom: 16rem;
+  left: 1rem;
 }
 
 .nav-hamburger {
@@ -144,7 +145,7 @@ img {
     width: 100vw;
     border-radius: 5px;
     margin: 0rem 0rem;
-    height: 85vh;
+    height: 100vh;
 }
 
 .content-form {
